# services/nodevoto-web/app.js
@@ -24,19 +24,19 @@ const wrapOp = (op) => {
 };
 
 class App {
-  constructor(routes, webPort, webpackDevServerHost, indexBundle, emojiClient, votingClient) {
+  constructor(routes, webPort, webpackDevServerHost, indexBundle, gifClient, votingClient) {
     this.webPort = webPort;
     this.webpackDevServerHost = webpackDevServerHost;
     this.indexBundle = indexBundle;
-    this.emojiClient = emojiClient;
+    this.gifClient = gifClient;
     this.votingClient = votingClient;
 
     routes.get('/', this.handleIndex.bind(this));
     routes.get('/leaderboard', this.handleIndex.bind(this));
     routes.get('/js', this.handleJs.bind(this));
     routes.get('/img/favicon.ico', this.handleFavicon.bind(this));
-    routes.get('/api/list', this.handleListEmoji.bind(this));
-    routes.get('/api/vote', this.handleVoteEmoji.bind(this));
+    routes.get('/api/list', this.handleListGif.bind(this));
+    routes.get('/api/vote', this.handleVoteGif.bind(this));
     routes.get('/api/leaderboard', this.handleLeaderboard.bind(this));
   }
 
@@ -46,12 +46,12 @@ class App {
   }
 
   async _FindByShortcode(arg) {
-    let response = await wrapOp(this.emojiClient.FindByShortcode.bind(this.emojiClient))(arg);
-    return response.Emoji;
+    let response = await wrapOp(this.gifClient.FindByShortcode.bind(this.gifClient))(arg);
+    return response.Gif;
   }
 
   async _ListAll() {
-    let response = await wrapOp(this.emojiClient.ListAll.bind(this.emojiClient))();
+    let response = await wrapOp(this.gifClient.ListAll.bind(this.gifClient))();
     return response.list;
   }
 
@@ -65,9 +65,9 @@ class App {
       let results = await this._Results();
 
       let list = results.map(async (item) => {
-        return this._FindByShortcode({ Shortcode: item.Shortcode }).then(emoji => {
-          return { 'shortcode': emoji.shortcode,
-            'unicode': emoji.unicode,
+        return this._FindByShortcode({ Shortcode: item.Shortcode }).then(gif => {
+          return { 'shortcode': gif.shortcode,
+            'url': gif.url,
             'votes': item.Votes };
         });
       });
@@ -78,25 +78,25 @@ class App {
     }
   }
 
-  async handleVoteEmoji(req, res) {
-    let emojiShortcode = req.query['choice'];
-    if (emojiShortcode === undefined || emojiShortcode === '') {
-      let errmsg = `Emoji choice [${emojiShortcode}] is mandatory`;
+  async handleVoteGif(req, res) {
+    let gifShortcode = req.query['choice'];
+    if (gifShortcode === undefined || gifShortcode === '') {
+      let errmsg = `Gif choice [${gifShortcode}] is mandatory`;
       logger.error(errmsg);
       return res.status(400).json(errmsg);
     }
 
     try {
-      let match = await this._FindByShortcode({ Shortcode: emojiShortcode });
+      let match = await this._FindByShortcode({ Shortcode: gifShortcode });
 
       if (match === null) {
-        let errmsg = `Choosen emoji shortcode [${emojiShortcode}] doesnt exist`;
+        let errmsg = `Choosen gif shortcode [${gifShortcode}] doesnt exist`;
         logger.error(errmsg);
         return res.status(400).json(errmsg);
       }
 
       let operation = Object.entries(shortcode).filter(sc => {
-        return sc[1] === emojiShortcode;
+        return sc[1] === gifShortcode;
       });
 
       let op = operation.length > 0 ? operation[0][0] : null;
@@ -106,15 +106,15 @@ class App {
         let voted = await vote();
         return res.json(voted);
       } else {
-        logger.error(`Emoji lacks implementation of rpc operation [${op}]`);
-        throw new Error('Emoji lacks implementation');
+        logger.error(`Gif lacks implementation of rpc operation [${op}]`);
+        throw new Error('Gif lacks implementation');
       }
     } catch (err) {
       return this.handleError(err, res);
     }
   }
 
-  async handleListEmoji(req, res) {
+  async handleListGif(req, res) {
     try {
       let list = await this._ListAll();
 
@@ -169,7 +169,7 @@ class App {
   }
 }
 
-module.exports.create = async(webPort, webpackDevServerHost, indexBundle, emojiClient, votingClient) => {
+module.exports.create = async(webPort, webpackDevServerHost, indexBundle, gifClient, votingClient) => {
   let app = express();
   let routes = express.Router();
 
@@ -180,7 +180,7 @@ module.exports.create = async(webPort, webpackDevServerHost, indexBundle, emojiC
   app.use('/', routes);
   app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-  new App(routes, webPort, webpackDevServerHost, indexBundle, emojiClient, votingClient);
+  new App(routes, webPort, webpackDevServerHost, indexBundle, gifClient, votingClient);
 
   return app;
 };
